[package]
name = "rust-timeular-api"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
